# distributed_key_generator

./: .gitignore  Cargo.toml  Config.toml  README.md  skde_params.json
cli/: Cargo.toml
cli/src/: command.rs  config.rs  lib.rs
cli/src/commands/: mod.rs
cli/src/commands/node/: data_dir.rs  dkg.rs  mod.rs  rpc_server.rs
cli/src/commands/trusted_setup/: mod.rs  skde.rs
data/authority/: skde_params.json
node/primitives/: Cargo.toml
node/primitives/src/: auth.rs  config.rs  key.rs  lib.rs  sbb.rs  skde.rs  state.rs
node/primitives/src/key_service/: mod.rs  skde.rs
node/primitives/src/secure_block/: mod.rs  skde.rs
node/service/: Cargo.toml
node/service/src/: builder.rs  lib.rs
node/service/src/task/: authority_setup.rs  mod.rs  rpc.rs  single_key_generator.rs  skde_params.rs  worker.rs
node/service/src/task/authority/: mod.rs
node/service/src/task/committee/: mod.rs  worker.rs
node/service/src/task/leader/: mod.rs
node/service/src/task/mock/: mod.rs
node/service/src/task/mock/rpc/: mod.rs  register.rs  unregister.rs
node/service/src/task/solver/: mod.rs  worker.rs
node/service/src/task/verifier/: mod.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  traits.rs
primitives/src/config/: config_path.rs  mod.rs
primitives/src/consensus/: commitment.rs  mod.rs  payload.rs
primitives/src/types/: error.rs  event.rs  hash.rs  key.rs  key_generator.rs  mod.rs  model.rs  payload.rs  primitives.rs  skde.rs
rpc/: Cargo.toml
rpc/src/: lib.rs  payload.rs
rpc/src/authority/: get_authorized_skde_params.rs
rpc/src/cluster/: get_key_generator_list.rs  mod.rs  request_submit_partial_key.rs  submit_final_reveal.rs  submit_partial_key.rs  sync_dec_key.rs  sync_decryption_key.rs  sync_enc_key.rs  sync_finalized_enc_keys.rs  sync_finalized_partial_keys.rs  sync_key_generator.rs  sync_partial_key.rs
rpc/src/common/: get_skde_params.rs  mod.rs  sync_finalized_partial_keys.rs
rpc/src/internal/: add_key_generator.rs
rpc/src/schema/: mod.rs  request.rs  response.rs
rpc/src/solver/: submit_decryption_key.rs  sync_finalized_partial_keys.rs
scripts/: 01_init_key_generator.sh  02_run_key_generator.sh  10_initialize.sh  env.sh
scripts/execute/: 00_cleanup_nodes.sh  01_cleanup_nodes.sh  01_init_key_generator.sh  01_run_all_nodes.sh  02_run_authority.sh  02_run_key_generator.sh  02_run_leader.sh  03_run_committee.sh  03_run_leader.sh  03_setup_test_nodes.sh  04_run_committee.sh  04_run_test_nodes.sh  05_cleanup_test_nodes.sh  05_register_nodes.sh  05_run_solver.sh  06_register_nodes.sh  06_run_solver.sh  README.md  env.sh  env_example.sh
scripts/key_generators/key_generator_0/: Config.toml
scripts/key_generators/key_generator_0/database/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007  OPTIONS-000009
scripts/rpc-call/: 10_initialize.sh  env.sh  env_example.sh
scripts/rpc-call/cluster/: get_key_generator_list.sh
src/: Cargo.toml  error.rs  lib.rs  main.rs  state.rs  util.rs
src/cli/: Cargo.toml  config.rs  config_option.rs  config_path.rs
src/client/: key_generator.rs  mod.rs  seeder.rs
src/models/: key_generator.rs  mod.rs
src/node/: Cargo.toml
src/node/src/: lib.rs
src/node/src/config/: config_path.rs  mod.rs
src/node/src/task/: authority_setup.rs  mod.rs  single_key_generator.rs
src/rpc/: Cargo.toml  common.rs  mod.rs
src/rpc/authority/: get_authorized_skde_params.rs  mod.rs
src/rpc/cluster/: ack_decryption_key.rs  ack_partial_key.rs  final_reveal.rs  get_key_generator_list.rs  get_skde_params.rs  mod.rs  request_submit_partial_key.rs  run_generate_partial_key.rs  submit_decryption_key.rs  submit_final_reveal.rs  submit_partial_key.rs  sync_aggregated_key.rs  sync_decryption_key.rs  sync_finalized_partial_keys.rs  sync_key_generator.rs  sync_partial_key.rs  sync_partial_keys.rs
src/rpc/common/: get_skde_params.rs  mod.rs  sync_finalized_partial_keys.rs  types.rs
src/rpc/debug/: mod.rs
src/rpc/internal/: add_key_generator.rs  mod.rs
src/rpc/internal/debug/: run_single_key_generator.rs
src/rpc/solver/: get_skde_params.rs  mod.rs  submit_decryption_key.rs  sync_finalized_partial_keys.rs  sync_partial_keys.rs
src/rpc/src/: lib.rs
src/rpc/src/authority/: get_authorized_skde_params.rs  mod.rs
src/rpc/src/cluster/: get_key_generator_list.rs  mod.rs  request_submit_partial_key.rs  submit_final_reveal.rs  submit_partial_key.rs  sync_decryption_key.rs  sync_finalized_partial_keys.rs  sync_key_generator.rs  sync_partial_key.rs
src/rpc/src/common/: get_skde_params.rs  mod.rs
src/rpc/src/solver/: mod.rs  sync_finalized_partial_keys.rs
src/state/: mod.rs
src/task/: authority_setup.rs  mod.rs  partial_key_manager.rs  single_key_generator.rs
src/tests/: mod.rs  test_helpers.rs  utils.rs
src/tests/integration/: get_skde_params.rs  mod.rs  node_registration.rs  register_node.rs  register_nodes.rs  run_multiple_committees_one_leader.rs  run_partial_key_manager.rs  run_single_node_for_each_role.rs  run_verification_logic.rs  run_verifier_logic.rs  submit_partial_key_and_ack.rs
src/types/: Cargo.toml  key.rs  key_generator.rs  mod.rs  session.rs  signer.rs  skde_params.rs
src/types/config/: config_option.rs  config_path.rs  mod.rs
src/types/key/: mod.rs  model.rs
src/types/key_generator/: mod.rs  model.rs
src/types/src/: error.rs  key.rs  key_generator.rs  lib.rs  state.rs
src/utils/: key.rs  log.rs  mod.rs  signature.rs  time.rs
src/utils/src/: key.rs  log.rs  signature.rs
tests/: utils.rs
tests/integration/: mod.rs  run_single_node_for_each_role.rs  run_verifier_logic.rs
utils/: Cargo.toml
utils/src/: key.rs  lib.rs  log.rs  signature.rs  time.rs
