[package]
name = "distributed-key-generation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "key-generator"
path = "src/bin/key_generator.rs"

[dependencies]
bincode = "1.3.3"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.127"
clap = { version = "4.4.7", features = ["derive"] }
toml = "0.8.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sha2 = "0.10"
sha3 = "0.10"
once_cell = "1.19.0"
ethers = "2.0.4"

skde = { git = "https://github.com/radiusxyz/skde", rev = "d6ef27d4f1e34b391eddb039cf0b9f994f7cc2fe" }
radius-sdk = { git = "https://github.com/radiusxyz/radius-sdk-rs", tag = "v0.1", features = [
    "full",
] }
const-hex = "1.14.0"
anyhow = "1.0.97"
thiserror = "2.0.12"
tempfile = "3.10.0"
