[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["<dev@radius.xyz>"]
homepage = "https://theradius.xyz"
repository = "https://github.com/radiusxyz/distributed_key_generator"

[workspace]
resolver = "2"
members = [
    "primitives",
    "rpc",
    "cli",
    "utils",
    "src",
    "node/primitives",
    "node/service",
]

default-members = ["src"]

[workspace.dependencies]
# Internal
dkg-primitives = { path = "primitives" }
dkg-rpc = { path = "rpc" }
dkg-cli = { path = "cli" }
dkg-utils = { path = "utils" }
dkg-node-service = { path = "node/service" }
dkg-node-primitives = { path = "node/primitives" }

# Radius
skde = { git = "https://github.com/radiusxyz/skde", rev = "d6ef27d4f1e34b391eddb039cf0b9f994f7cc2fe" }
radius-sdk = { path = "../radius-sdk-rs/radius-sdk", features = ["full"] }
# External
async-trait = "0.1.88"
bincode = "1.3.3"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.127"
clap = { version = "4.4.7", features = ["derive"] }
toml = "0.8.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sha2 = "0.10"
sha3 = "0.10"
once_cell = "1.19.0"
ethers = "2.0.4"
const-hex = "1.14.0"
anyhow = "1.0.97"
thiserror = "2.0.12"
tempfile = "3.10.0"
chrono = "0.4"
futures-util = "0.3"
futures = "0.3.31"
dirs = "5.0"
