[package]
name = "dkg-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dkg-primitives.workspace = true
dkg-node-primitives.workspace = true
dkg-node-service.workspace = true
clap.workspace = true
serde.workspace = true
radius-sdk.workspace = true
tokio.workspace = true
dirs.workspace = true
skde.workspace = true
serde_json.workspace = true

[features]
experimental = []