[package]
name = "dkg-primitives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
radius-sdk.workspace = true
tokio.workspace = true
skde.workspace = true
serde.workspace = true
clap.workspace = true
tracing.workspace = true
toml.workspace = true
serde_json.workspace = true
futures-util.workspace = true