[package]
name = "dkg-primitives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dkg-utils.workspace = true
radius-sdk.workspace = true
tokio.workspace = true
skde.workspace = true
serde.workspace = true
clap.workspace = true
tracing.workspace = true
toml.workspace = true
serde_json.workspace = true
futures.workspace = true
futures-util.workspace = true
futures-timer.workspace = true
sha2.workspace = true
sha3.workspace = true
async-trait.workspace = true
thiserror.workspace = true