[package]
name = "dkg-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
radius-sdk.workspace = true
dkg-primitives.workspace = true

skde.workspace = true
tracing.workspace = true
sha2.workspace = true
sha3.workspace = true
ethers.workspace = true
serde.workspace = true
bincode.workspace = true
chrono.workspace = true
serde_json.workspace = true