[package]
name = "dkg-node-primitives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dkg-primitives.workspace = true

radius-sdk.workspace = true
skde.workspace = true

serde.workspace = true
toml.workspace = true