[package]
name = "dkg-node-primitives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dkg-rpc.workspace = true
dkg-primitives.workspace = true
radius-sdk.workspace = true
skde.workspace = true
sha2.workspace = true
sha3.workspace = true
serde.workspace = true
toml.workspace = true
ethers.workspace = true
bincode.workspace = true
futures-util.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde_json.workspace = true

[features]
experimental = []