[package]
name = "dkg-node-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dkg-primitives.workspace = true
dkg-node-primitives.workspace = true
dkg-rpc.workspace = true
radius-sdk.workspace = true

tokio.workspace = true
tracing.workspace = true