[package]
name = "dkg-node-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dkg-primitives.workspace = true
dkg-node-primitives.workspace = true
dkg-rpc.workspace = true
radius-sdk.workspace = true

serde.workspace = true
serde_json.workspace = true
skde.workspace = true
tokio.workspace = true
tracing.workspace = true
ethers.workspace = true
bincode.workspace = true
futures-util.workspace = true

[features]
experimental = []