[package]
name = "dkg-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

dkg-rpc.workspace = true
dkg-utils.workspace = true

radius-sdk.workspace = true
skde.workspace = true

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
toml.workspace = true

