[package]
name = "dkg-rpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dkg-utils.workspace = true
dkg-types.workspace = true

radius-sdk.workspace = true
skde.workspace = true

serde.workspace = true
bincode.workspace = true
tracing.workspace = true