[package]
name = "dkg-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]


radius-sdk.workspace = true
skde.workspace = true

tracing.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
clap.workspace = true
serde_json.workspace = true
const-hex.workspace = true